--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,47 +1,8 @@
-/* ul {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-	flex-wrap: wrap;
-	list-style: none;
 
-	li {
-		display: flex;
-		width: 10rem;
-		height: 10rem;
-		margin: 0.25rem;
-		flex-flow: column;
-		border-radius: 0.2rem;
-		padding: 1rem;
-		font-weight: 300;
-		font-size: 0.8rem;
-		box-sizing: border-box;
-		background: rgba(255, 255, 255, 0.25);
-		box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-		backdrop-filter: blur(4px);
-		-webkit-backdrop-filter: blur(4px);
-		border-radius: 10px;
-		border: 1px solid rgba(255, 255, 255, 0.18);
 
-		time {
-			font-size: 2rem;
-			margin: 0 0 1rem 0;
-			font-weight: 500;
-		}
-	}
-	.today {
-		time {
-			font-weight: 800;
-		}
-		background: #ffffff70;
-	}
-} */
-
-/*main {
-    background-color: rgb(36, 33, 33);
-
-    height: 60vh;
-}*/
-
+main  {
+  width: 100%;
+}
 .week {
   display: flex;
   flex-direction: column;
@@ -49,18 +10,7 @@
   align-items: center;
   gap: 30px;
 }
-table {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 16px;
-  border-spacing: 5px;
-}
 
-th {
-  padding: 4px 6px;
-  border-radius: 30px;
-  width: 120px;
-  height: 60px;
-}
 
 td {
   padding: 4px 6px;
