--- a/src/styles/Form.scss
+++ b/src/styles/Form.scss
@@ -10,7 +10,7 @@
 
     & legend {
         font-weight: 600;
-        margin: auto;
+        margin: 10px auto;
     }
 
     & ul {
@@ -19,6 +19,11 @@
         padding: 10px;
         gap: 10px;
 
+    }
+
+    & label {
+        display: block;
+        margin: 5px;
     }
 
     &-text-input {
