--- a/src/styles/Form.scss
+++ b/src/styles/Form.scss
@@ -1,5 +1,13 @@
+.form-container {
+    background-image: url("src/images/kelly-sikkema-iiaUVel-cJE-unsplash.jpg");
+    background-position: 50% 70%;
+    background-size: 170%;
+    
+    
+}
+
 .form {
-    background-color: #f5f5f5;
+    background-color: transparent;
     width: 90%;
     margin: 10px auto;
     padding: 10px;
@@ -49,8 +57,11 @@
 .form-title {
     font-size: 22px;
     text-align: center;
+    color: lightgray;
+    padding-top: 1rem;
 }
 
 .errorMsg {
     color: red;
 }
+
