--- a/src/styles/Form.scss
+++ b/src/styles/Form.scss
@@ -1,13 +1,13 @@
-.form-container {
-    background-image: url("src/images/kelly-sikkema-iiaUVel-cJE-unsplash.jpg");
-    background-position: 50% 70%;
-    background-size: 170%;
+// .form-container {
+//     background-image: url("src/images/kelly-sikkema-iiaUVel-cJE-unsplash.jpg");
+//     background-position: 50% 70%;
+//     background-size: 170%;
     
     
-}
+// }
 
 .form {
-    background-color: transparent;
+    background-color: #f5f5f5;
     width: 90%;
     margin: 10px auto;
     padding: 10px;
@@ -15,6 +15,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    
+
 
     & legend {
         font-weight: 600;
@@ -29,19 +31,75 @@
 
     }
 
-    & label {
+    &-label {
+        width: 100%;
         display: block;
         margin: 5px;
     }
 
     &-text-input {
-        padding: 2px;
+        width: 65%;
+        padding: 4px;
         margin: 5px;
+        box-sizing: border-box;
+        border: 1px solid grey;
+        border-radius: 10px;
+        outline: none;
+    }
+
+    &-text-input-label {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        width: 100%;
+        margin: 8px;
+        
+        & :focus {
+            border: 1px solid palevioletred;
+        }
+
+    }
+
+    & textarea {
+        width: 90%;
+        height: 100px;
+        padding: 10px;
+        box-sizing: border-box;
+        border: 1px solid grey;
+        border-radius: 10px;
+        background-color: white;
+        resize: none;
+
+    }
+
+    & fieldset {
+        width: 95%;
+        border: 1px solid grey;
+        border-radius: 10px;
+        padding: 10px;
+        margin: 5px;
+    }
+
+    & fieldset legend {
+        border-radius: 10px;
+        background-color: pink;
+        padding: 5px 10px;
+        
+    }
+
+    & fieldset label {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        margin-bottom: 5px;
+
     }
 
     &-button {
         width: 60%;
         background-color: rgb(28, 216, 191);
+        border: 1px solid black;
         font-size: 1rem;
         width: 35%;
         border-radius: 10px;
@@ -50,6 +108,7 @@
         text-align: center;
         color: black;
         font-weight: 600;
+        cursor: pointer;
     }
     
 }
