--- a/src/styles/MealsListPage.scss
+++ b/src/styles/MealsListPage.scss
@@ -46,3 +46,18 @@
         margin: 10px auto;
     }
 }
+
+.backButton {
+    background-color: palevioletred;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-bottom: 15px;
+  }
+  
+  .backButton:hover {
+    background-color: #0056b3;
+  }
