added basic style

--- a/src/styles/DayCard.scss
+++ b/src/styles/DayCard.scss
@@ -23,6 +23,10 @@
         width: 90%;
     }
 
+    & h4 {
+        color: palevioletred;
+    }
+
     &-meals-list {
         border: 1px solid #e0e0e0;
         width: 90%;
